--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,13 @@
             android:exported="false"
             android:theme="@style/Theme.MusicLab" />
 
+        <!-- Activity per la gestione della coda di riproduzione -->
+        <activity
+            android:name=".QueueActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MusicLab"
+            android:launchMode="singleTop" />
+
     </application>
 
 </manifest>
