--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
 
     <!-- Permessi per controllare la riproduzione audio -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <!-- AGGIUNGI QUESTA RIGA: -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
 
     <application
@@ -52,6 +51,13 @@
         <!-- Activity per la gestione della coda di riproduzione -->
         <activity
             android:name=".QueueActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MusicLab"
+            android:launchMode="singleTop" />
+
+        <!-- NUOVO: Activity per vedere le canzoni nella playlist -->
+        <activity
+            android:name=".PlaylistSongsActivity"
             android:exported="false"
             android:theme="@style/Theme.MusicLab"
             android:launchMode="singleTop" />
